# FP-LLM

./: .gitignore  .pre-commit-config.yaml  BACKTEST_DESIGN.md  CLAUDE.md  LICENSE  README.md  REAMME.md  pyproject.toml
.github/workflows/: ci.yaml  post_evaluate.yaml  schedule.yaml  schedule.yml
configs/: base.yaml  squad.sample.yaml  squad.yaml
configs/backtest/: analyzer_config.yaml  exp1_full_benchmarks.yaml  s0_optimal_squad.yaml
data/backtest/analysis/: data_integrity_report.json  s0_analysis_data.json  s0_strategy_report.md
data/backtest/results/: s0_full_season_2023_24.yaml  s0_mvp_test.yaml  s0_test_results.yaml
data/processed/: actuals_gw01.parquet  actuals_gw02.parquet  actuals_gw03.parquet  actuals_gw04.parquet  features.parquet  features_gw01.parquet  features_gw02.parquet  features_gw03.parquet  features_gw04.parquet  features_gw05.parquet  last_season_totals.parquet  predictions_gw01.parquet  predictions_gw02.parquet  predictions_gw03.parquet  predictions_gw04.parquet  predictions_gw05.parquet
docs/: ARCHITECTURE.md  CLI.md  OPTIMIZER_NOTES.md  PREDICTION_NOTES.md  REPORT_SCHEMA.md
plans/: MASTER_PLAN.md  SUBPLAN_DATA_AND_CALIBRATION.md  SUBPLAN_MODEL_AND_TRAINING.md  SUBPLAN_STRATEGY_AND_INTEGRATION.md
plans/backtest/: 00_MASTER_PLAN.md  01_mvp_foundation.md  02_strategy_system.md  03_benchmark_analysis.md  04_optimization_experience.md  README.md
reports/: top10_gw1-4.json
reports/gw01/: metrics.json  report.md  summary.json
reports/gw02/: metrics.json  report.md  summary.json
reports/gw03/: metrics.json  report.md  summary.json
reports/gw04/: metrics.json  report.md  summary.json
reports/gw05/: report.md  summary.json
scripts/: apply_transfers.py  backfill_metrics.py  build_features.py  build_squad.py  check_gw_finished.py  data_integrity_check.py  detect_gw.py  dev_check.sh  dev_cold_start.sh  dev_pick_xi.sh  evaluate_gw.py  fetch_actuals.py  fetch_fpl.py  fetch_last_season.py  find_webname.py  generate_report.py  generate_strategy_report.py  new_gw_generate.sh  optimize_squad.py  post_eval.sh  predict_points.py  run_backtest.py  run_cold_start.py  use_wildcard.sh  verify_backtest.py
scripts/backtest/: README.md  generate_s0_squad.py
src/backtest/: README.md  USAGE_GUIDE.md  __init__.py  analyzer.py  engine.py
src/backtest/strategies/: __init__.py  s0_generator.py  s0_strategy.py
src/fpl_data/: __init__.py  clients.py  loaders.py  transforms.py
src/metrics/: evaluate.py
src/optimizer/: chips.py  dgw.py  finance.py  ilp.py  squad_builder.py  transfers.py
src/prediction/: baseline.py  cold_start.py
tests/: conftest.py  test_chips_trigger.py  test_cli_empty_squad.py  test_clients.py  test_cold_start.py  test_dgw_and_bench.py  test_finance_model.py  test_loaders_transforms.py  test_m4_smoke.py  test_metrics.py  test_prediction_baseline.py
tests/fixtures/: bootstrap-static.sample.json  fixtures.sample.json
(+1 files in other folders)
